[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
dino-macros.workspace = true
matchit = "0.7"
rquickjs = { version = "0.6.2", features = ["full"] }
rquickjs-macro = "0.6.2"
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
typed-builder = "0.19.1"
serde_yaml = "0.9.34"
serde = { workspace = true }
indexmap = { version = "2.4.0", features = ["serde"] }
thiserror = "1.0.63"
dashmap = "6.0.1"


[dev-dependencies]
tracing-subscriber = { workspace = true }
